--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
-  <body>
-    <h1>szi</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
+  <title>vazul</title>
+</head>
+<body>
+  
+</body>
 </html>
